--- a/app/assets/css/home/styles.css
+++ b/app/assets/css/home/styles.css
@@ -23,7 +23,7 @@
 	margin-top: 10px;
 }
 
-@media only screen and ( max-width: 1200px ) {
+@media only screen and ( max-width: 1200px ) { /* mobile: do things when size is 1200px or less */
 	.main-container {
 		width: 100%;
 	}
