--- a/app/assets/css/templates/default/styles.css
+++ b/app/assets/css/templates/default/styles.css
@@ -73,7 +73,7 @@ h1 {
 	cursor: pointer;
 }
 
-@media only screen and ( max-width: 1200px ) {
+@media only screen and ( max-width: 1200px ) { /* mobile: do things when size is 1200px or less */
 	h1 {
 		font-size: 24px;
 	}
