--- a/app/assets/css/templates/default/styles.css
+++ b/app/assets/css/templates/default/styles.css
@@ -103,6 +103,10 @@ h1 {
 	font-size: 12px;
 }
 
+.input-default-error {
+	border: 1px solid #d5462d;
+}
+
 .default-button {
 	font-size: 16px;
 	padding: 12px;
