--- a/app/assets/css/templates/default/styles.css
+++ b/app/assets/css/templates/default/styles.css
@@ -224,6 +224,38 @@ h1 {
 	float: right;
 }
 
+.loader-overlay {
+	background: rgba( 26, 26, 26, 0.8 );
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	z-index: 4;
+	display: none;
+}
+
+.loader-container {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+	z-index: 5;
+	display: none;
+}
+
+.loader img {
+	animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+	from {
+		transform: rotate( 0deg );
+	}
+	to {
+		transform: rotate( 360deg );
+	}
+}
+
 @media only screen and ( max-width: 1200px ) { /* mobile: do things when size is 1200px or less */
 	h1 {
 		font-size: 24px;
